--- a/schemas/model/package.json
+++ b/schemas/model/package.json
@@ -2,7 +2,7 @@
   "name": "pr-spec-model",
   "version": "0.0.0",
   "description": "Model component of the pragmatic.rest spec",
-  "main": "schema.json",
+  "main": "schema.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha",
     "debug": "node-debug node_modules/.bin/_mocha",
