--- a/package.json
+++ b/package.json
@@ -1,19 +1,7 @@
 {
-  "name": "pragmatic-rest-spec",
+  "name": "pr-spec",
   "version": "0.0.0",
   "description": "The specification created and adhered by when using pragmatic.rest",
-  "main": "index.js",
-  "scripts": {
-    "test": "./node_modules/.bin/mocha --recursive",
-    "debug": "node-debug node_modules/.bin/_mocha --recursive",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --recursive --report lcovonly -- -R spec",
-    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
-  },
   "author": "Brian Mullan <bmullan91@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "mocha": "~2.1.0",
-    "chai": "~1.10.0",
-    "tv4": "~1.1.5"
-  }
+  "license": "MIT"
 }
